{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 172,
  "lineage": "7a5a7ced-f441-a90d-2147-1e8ff3e1adf4",
  "resources": [
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "DB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03b13f993274ce14a",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0eeee727864e56429",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eeee727864e56429",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02f9897e15c351e29",
            "private_dns": "ip-41-0-2-141.eu-west-1.compute.internal",
            "private_ip": "41.0.2.141",
            "public_ip": "34.241.117.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ccf66aa33405de4f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0818e90fb25be86a9",
            "tags": {
              "Name": "Eng57.PC.db"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048631fcad1b11e96"
            ]
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_security_group.sgapp",
            "module.db_tier.aws_security_group.sgdb",
            "module.db_tier.aws_subnet.subprivate"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00b48f09c568b0014",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0a2b0b0ac57c381d8",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a2b0b0ac57c381d8",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07cb0b533a2911f58",
            "private_dns": "ip-41-0-1-13.eu-west-1.compute.internal",
            "private_ip": "41.0.1.13",
            "public_ip": "3.249.161.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0a6a6694e5363c810",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02cf3bb1e6e872138",
            "tags": {
              "Name": "Eng57.PC.app"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-050e096b7c4ea0a59"
            ]
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_security_group.sgapp",
            "module.app_tier.aws_subnet.subpublic",
            "module.db_tier.aws_instance.DB",
            "module.db_tier.aws_security_group.sgdb",
            "module.db_tier.aws_subnet.subprivate"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-02c8406c6ef8be529",
            "id": "igw-02c8406c6ef8be529",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.PC.igw"
            },
            "vpc_id": "vpc-0737ad2a205a04f18"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "naclprivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0ba9a53a336459551",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "41.0.1.0/24",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              }
            ],
            "id": "acl-0ba9a53a336459551",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "41.0.1.0/24",
                "from_port": 27017,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 27017
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0818e90fb25be86a9"
            ],
            "tags": null,
            "vpc_id": "vpc-0737ad2a205a04f18"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_subnet.subpublic",
            "module.db_tier.aws_subnet.subprivate"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "naclpublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:network-acl/acl-0949f4df6ad874d95",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "90.214.12.144/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 22
              }
            ],
            "id": "acl-0949f4df6ad874d95",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "90.214.12.144/32",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 22
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-02cf3bb1e6e872138"
            ],
            "tags": {
              "Name": "Eng57.PC.NACL.public"
            },
            "vpc_id": "vpc-0737ad2a205a04f18"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_subnet.subpublic"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "routepublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09c3b22d34fb03664",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c8406c6ef8be529",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Eng57.PC.route.public"
            },
            "vpc_id": "vpc-0737ad2a205a04f18"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routeapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d5d354265c30d2d6",
            "route_table_id": "rtb-09c3b22d34fb03664",
            "subnet_id": "subnet-02cf3bb1e6e872138"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.mainvpc",
            "module.app_tier.aws_route_table.routepublic",
            "module.app_tier.aws_subnet.subpublic"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgapp",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-050e096b7c4ea0a59",
            "description": "Allow http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-050e096b7c4ea0a59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 3000 from VPC",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "90.214.12.144/32"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-sg",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng57.PC.SG.App"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737ad2a205a04f18"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgdb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-048631fcad1b11e96",
            "description": "Allow http and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048631fcad1b11e96",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Mongodb connection",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-050e096b7c4ea0a59"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "db-sg",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Eng57.PC.SG.DB"
            },
            "timeouts": null,
            "vpc_id": "vpc-0737ad2a205a04f18"
          },
          "dependencies": [
            "aws_vpc.mainvpc",
            "module.app_tier.aws_security_group.sgapp"
          ]
        }
      ]
    },
    {
      "module": "module.db_tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subprivate",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0818e90fb25be86a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "41.0.2.0/24",
            "id": "subnet-0818e90fb25be86a9",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.PC.private.sub"
            },
            "vpc_id": "vpc-0737ad2a205a04f18"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app_tier",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subpublic",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-02cf3bb1e6e872138",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "41.0.1.0/24",
            "id": "subnet-02cf3bb1e6e872138",
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.PC.public.sub"
            },
            "vpc_id": "vpc-0737ad2a205a04f18"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0737ad2a205a04f18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "41.0.0.0/16",
            "default_network_acl_id": "acl-066eb30df774db9e8",
            "default_route_table_id": "rtb-011dc38f1645113f2",
            "default_security_group_id": "sg-07a3145a667818fb3",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0737ad2a205a04f18",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-011dc38f1645113f2",
            "owner_id": "135928476890",
            "tags": {
              "Name": "Eng57.PC.vpc"
            }
          }
        }
      ]
    }
  ]
}